force-app/main/default/objects/Digital_Main_Street__c/fields/Other_Social_Media__c.field-meta.xml
<CustomField>
    <fullName>Other_Social_Media__c</fullName>
    <label>Other(Social Media)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>