force-app/main/default/objects/Digital_Main_Street__c/fields/Other_Third_Party__c.field-meta.xml
<CustomField>
    <fullName>Other_Third_Party__c</fullName>
    <label>Other(Third Party)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>