force-app/main/default/objects/Digital_Main_Street__c/fields/Other_Twitter__c.field-meta.xml
<CustomField>
    <fullName>Other_Twitter__c</fullName>
    <label>Other(Twitter)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>