force-app/main/default/objects/Digital_Main_Street__c/fields/Other_Utilize_Analytics__c.field-meta.xml
<CustomField>
    <fullName>Other_Utilize_Analytics__c</fullName>
    <label>Other(Utilize Analytics)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>