force-app/main/default/objects/Digital_Main_Street__c/fields/Other_Video_Storytelling__c.field-meta.xml
<CustomField>
    <fullName>Other_Video_Storytelling__c</fullName>
    <label>Other(Video Storytelling)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>