force-app/main/default/objects/Digital_Main_Street__c/fields/Other_Website__c.field-meta.xml
<CustomField>
    <fullName>Other_Website__c</fullName>
    <label>Other(Website)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>