force-app/main/default/objects/Digital_Main_Street__c/fields/Other_Yellow_Page__c.field-meta.xml
<CustomField>
    <fullName>Other_Yellow_Page__c</fullName>
    <label>Other(Yellow Page)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>