force-app/main/default/objects/Digital_Main_Street__c/fields/Payment_Processing_Integrated_With_POS__c.field-meta.xml
<CustomField>
    <fullName>Payment_Processing_Integrated_With_POS__c</fullName>
    <label>Payment Processing Integrated With POS?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Not Sure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>