force-app/main/default/objects/Digital_Main_Street__c/fields/Pinterest__c.field-meta.xml
<CustomField>
    <fullName>Pinterest__c</fullName>
    <formula>Account_DMS__r.Pinterest__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pinterest</label>
    <type>Text</type>
</CustomField>