force-app/main/default/objects/Digital_Main_Street__c/fields/planning_on_expanding_your_business__c.field-meta.xml
<CustomField>
    <fullName>planning_on_expanding_your_business__c</fullName>
    <label>planning on expanding your business?</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Open a new location</fullName>
            </value>
            <value>
                <fullName>Hire additional staff</fullName>
            </value>
            <value>
                <fullName>Start selling products online</fullName>
            </value>
            <value>
                <fullName>Start a franchise</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>