force-app/main/default/objects/Digital_Main_Street__c/fields/Please_select_the_sector_description__c.field-meta.xml
<CustomField>
    <fullName>Please_select_the_sector_description__c</fullName>
    <label>Sector Description Defines Business</label>
    <length>255</length>
    <type>Text</type>
</CustomField>