force-app/main/default/objects/Digital_Main_Street__c/fields/Reason_for_follow_up__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_follow_up__c</fullName>
    <label>Reason for follow up</label>
    <length>131000</length>
    <type>LongTextArea</type>
</CustomField>