force-app/main/default/objects/Digital_Main_Street__c/fields/Secondary_Contact__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Contact__c</fullName>
    <formula>Contact_DMS__r.Secondary_Contact__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Secondary Contact</label>
    <type>Text</type>
</CustomField>