force-app/main/default/objects/Digital_Main_Street__c/fields/Segment_Category__c.field-meta.xml
<CustomField>
    <fullName>Segment_Category__c</fullName>
    <label>Segment Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mom-Pop</fullName>
            </value>
            <value>
                <fullName>Digital Mom-Pop</fullName>
            </value>
            <value>
                <fullName>Tech Savvy</fullName>
            </value>
            <value>
                <fullName>High Tech</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>