force-app/main/default/objects/Digital_Main_Street__c/fields/Sign_up_for_Google_My_Business__c.field-meta.xml
<CustomField>
    <fullName>Sign_up_for_Google_My_Business__c</fullName>
    <label>Sign-up For Google My Business</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>