force-app/main/default/objects/Digital_Main_Street__c/fields/Site_has_Content_Management_System_CMS__c.field-meta.xml
<CustomField>
    <fullName>Site_has_Content_Management_System_CMS__c</fullName>
    <inlineHelpText>Content Management System (CMS)
A website CMS enables you to change the text and images on your website easily, with much of the site information stored in a database, as opposed to static, unchanging files.</inlineHelpText>
    <label>Site has Content Management System(CMS)?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Not Sure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>