force-app/main/default/objects/Digital_Main_Street__c/fields/Social_Media_Site_using_as_Website__c.field-meta.xml
<CustomField>
    <fullName>Social_Media_Site_using_as_Website__c</fullName>
    <label>Social Media Site using as Website</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Facebook</fullName>
            </value>
            <value>
                <fullName>Pinterest</fullName>
            </value>
            <value>
                <fullName>Twitter</fullName>
            </value>
            <value>
                <fullName>Instagram</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>