force-app/main/default/objects/Digital_Main_Street__c/fields/Social_website_details__c.field-meta.xml
<CustomField>
    <fullName>Social_website_details__c</fullName>
    <label>Social website details</label>
    <length>100</length>
    <type>Text</type>
</CustomField>