force-app/main/default/objects/Digital_Main_Street__c/fields/Sponsor_Product_Mentions__c.field-meta.xml
<CustomField>
    <fullName>Sponsor_Product_Mentions__c</fullName>
    <label>Sponsor Product Mentions</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Rogers</fullName>
            </value>
            <value>
                <fullName>Shopify</fullName>
            </value>
            <value>
                <fullName>Google</fullName>
            </value>
            <value>
                <fullName>Yellow Pages</fullName>
            </value>
            <value>
                <fullName>MasterCard</fullName>
            </value>
            <value>
                <fullName>Canada Post</fullName>
            </value>
            <value>
                <fullName>Microsoft</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>