force-app/main/default/objects/Digital_Main_Street__c/fields/Squad_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Squad_Feedback__c</fullName>
    <label>Squad Feedback</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>very good</fullName>
            </value>
            <value>
                <fullName>good</fullName>
            </value>
            <value>
                <fullName>neutral</fullName>
            </value>
            <value>
                <fullName>not good</fullName>
            </value>
            <value>
                <fullName>very poor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>