force-app/main/default/objects/Digital_Main_Street__c/fields/Staff_Contact__c.field-meta.xml
<CustomField>
    <fullName>Staff_Contact__c</fullName>
    <label>Staff Contact</label>
    <length>30</length>
    <type>Text</type>
</CustomField>