force-app/main/default/objects/Digital_Main_Street__c/fields/Time_Spent__c.field-meta.xml
<CustomField>
    <fullName>Time_Spent__c</fullName>
    <label>Time Spent</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>