force-app/main/default/objects/Digital_Main_Street__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <description>user to add the status of the person they met with.</description>
    <label>Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>