force-app/main/default/objects/Digital_Main_Street__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Identifies if they are connected to a vendor or main street business profile – dictating their next step in the process.</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Vendor</fullName>
            </value>
            <value>
                <fullName>Business</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>