force-app/main/default/objects/Digital_Main_Street__c/fields/Using_a_Social_Media_Site_as_Website__c.field-meta.xml
<CustomField>
    <fullName>Using_a_Social_Media_Site_as_Website__c</fullName>
    <label>Using a Social Media Site as Website?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Not Sure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>