force-app/main/default/objects/Digital_Main_Street__c/fields/Vendor_Overview__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Overview__c</fullName>
    <label>Vendor Overview</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>