force-app/main/default/objects/Digital_Main_Street__c/fields/Was_the_business_Onboarded__c.field-meta.xml
<CustomField>
    <fullName>Was_the_business_Onboarded__c</fullName>
    <label>Was the business Onboarded?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>