force-app/main/default/objects/Digital_Main_Street__c/fields/Website_Includes_Ecommerce__c.field-meta.xml
<CustomField>
    <fullName>Website_Includes_Ecommerce__c</fullName>
    <label>Website Includes Ecommerce?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Not Sure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>