force-app/main/default/objects/Digital_Main_Street__c/fields/What_Digital_Tools_Were_Activated__c.field-meta.xml
<CustomField>
    <fullName>What_Digital_Tools_Were_Activated__c</fullName>
    <label>What Digital Tools Were Activated?</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Google My Business</fullName>
            </value>
            <value>
                <fullName>Facebook Page</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Website</fullName>
            </value>
            <value>
                <fullName>NetSync</fullName>
            </value>
            <value>
                <fullName>Ecommerce</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>