force-app/main/default/objects/Digital_Main_Street__c/fields/What_InStore_Loyalty_Programs__c.field-meta.xml
<CustomField>
    <fullName>What_InStore_Loyalty_Programs__c</fullName>
    <label>What InStore Loyalty Programs?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>