force-app/main/default/objects/Digital_Main_Street__c/fields/What_is_your_business_type__c.field-meta.xml
<CustomField>
    <fullName>What_is_your_business_type__c</fullName>
    <label>What is your business type?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sole Proprietorship</fullName>
            </value>
            <value>
                <fullName>Corporation</fullName>
            </value>
            <value>
                <fullName>Partnership</fullName>
            </value>
            <value>
                <fullName>Cooperative</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>