force-app/main/default/objects/Digital_Main_Street__c/fields/Where_is_business_located__c.field-meta.xml
<CustomField>
    <fullName>Where_is_business_located__c</fullName>
    <label>Where is business located?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ground Floor</fullName>
            </value>
            <value>
                <fullName>Above Ground</fullName>
            </value>
            <value>
                <fullName>Below Ground</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>