force-app/main/default/objects/Digital_Main_Street__c/fields/Why_not__c.field-meta.xml
<CustomField>
    <fullName>Why_not__c</fullName>
    <label>Why not?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Business still too young</fullName>
            </value>
            <value>
                <fullName>Not in the budget</fullName>
            </value>
            <value>
                <fullName>Selling / closing the business</fullName>
            </value>
            <value>
                <fullName>Economic situation not good</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>