force-app/main/default/objects/Digital_Main_Street__c/fields/Why_not_Area_of_Interest__c.field-meta.xml
<CustomField>
    <fullName>Why_not_Area_of_Interest__c</fullName>
    <label>Why not?(Area of Interest)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>