force-app/main/default/objects/Digital_Main_Street__c/fields/Why_Not_Blog__c.field-meta.xml
<CustomField>
    <fullName>Why_Not_Blog__c</fullName>
    <label>Why Not?(Blog)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not sure how to get mentioned</fullName>
            </value>
            <value>
                <fullName>Not sure who to contact to get coverage</fullName>
            </value>
            <value>
                <fullName>Not sure how to start</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>