force-app/main/default/objects/Digital_Main_Street__c/fields/Why_Not_Campaigns_Social_Media__c.field-meta.xml
<CustomField>
    <fullName>Why_Not_Campaigns_Social_Media__c</fullName>
    <label>Why Not? (Campaigns-Social Media)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not enough time</fullName>
            </value>
            <value>
                <fullName>Not sure how to start</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Concerned about expense</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>