force-app/main/default/objects/Digital_Main_Street__c/fields/Why_Not_Customer_Engagement__c.field-meta.xml
<CustomField>
    <fullName>Why_Not_Customer_Engagement__c</fullName>
    <label>Why Not?(Customer Engagement)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not sure where to start</fullName>
            </value>
            <value>
                <fullName>Concerned about expense</fullName>
            </value>
            <value>
                <fullName>Not sure of the value</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>