force-app/main/default/objects/Digital_Main_Street__c/fields/Why_Not_Ecommerce__c.field-meta.xml
<CustomField>
    <fullName>Why_Not_Ecommerce__c</fullName>
    <label>Why Not?(Ecommerce)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not sure how to start</fullName>
            </value>
            <value>
                <fullName>Concerned about cost</fullName>
            </value>
            <value>
                <fullName>Not sure of the value</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>