force-app/main/default/objects/Digital_Main_Street__c/fields/Why_Not_Email__c.field-meta.xml
<CustomField>
    <fullName>Why_Not_Email__c</fullName>
    <label>Why Not? (Email)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not enough time</fullName>
            </value>
            <value>
                <fullName>Not sure of the value</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>