force-app/main/default/objects/Digital_Main_Street__c/fields/Why_not_Expand_Other__c.field-meta.xml
<CustomField>
    <fullName>Why_not_Expand_Other__c</fullName>
    <label>Why not?(Expand Other)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>