force-app/main/default/objects/Digital_Main_Street__c/fields/Why_not_Followup__c.field-meta.xml
<CustomField>
    <fullName>Why_not_Followup__c</fullName>
    <label>Why not?(Followup)</label>
    <type>TextArea</type>
</CustomField>